# autoafids

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  autoafids-dev.yml  entrypoint.sh  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto_assign.yml
.github/workflows/: auto_assign_reviewers.yml  build_docker.yml  lint-and-dryrun-testing.yml  push_conda.yml  python-testing.yml  test.yml  wetrun-testing.yml
autoafids/: pipeline_description.json  run.py
autoafids/config/: snakebids.yml
autoafids/resources/: tpl-MNI152NLin2009bAsym_res-01_desc-groundtruth_afids.fcsv
autoafids/resources/stereotaxy/: cZI.pkl  cZI_target_template.fcsv
autoafids/workflow/: Snakefile
autoafids/workflow/envs/: ants.yaml  nibabel.yaml  nnlm.yaml  pytorch.yaml  regqc.yaml  resample.yaml  skimage.yaml  synthsr.yaml  tensorflow.yaml  utils.yaml
autoafids/workflow/lib/: utils.py
autoafids/workflow/profiles/default/: config.yaml
autoafids/workflow/profiles/docker-conda/: config.yaml
autoafids/workflow/rules/: cnn.smk  fidqc.smk  nnlm.smk  regqc.smk  stereotaxy.smk  synthsr.smk
autoafids/workflow/scripts/: apply.py  apply_noprior_all.py  apply_noprior_single.py  apply_with_prior_all.py  apply_with_prior_single.py  clone_synthsr_repo.py  extract_models.py  gather_afids.py  n4_bias_corr.py  nnlm_to_fcsv.py  norm_schemes.py  qc.py  regis_script.py  regqc.py  regqc_summary.py  resample_img.py  run_synthsr.py  stereotaxy.py  template_flow.py  templateflow.py  tform_script.py  utils.py
conda.recipe/: recipe.yaml
docker/: Dockerfile  README.md
docs/: conf.py  dag.dot  index.md  requirements.txt
docs/contributing/: contributing.md
docs/getting_started/: apptainer.md  conda.md  docker.md  installation.md  pixi.md  singularity.md
docs/images/: dag.dot
docs/outputs/: output_files.md
docs/usage/: app_cli.md  cli.md  useful_options.md
docs/workflow/: dag.dot  workflow.md
profiles/docker-conda/: config.yaml
recipe/: meta.yaml
test_data/bids_T1w/: test_fcsv_output.py
test_data/bids_wetrun_testing/bids_T2w/: sub-718211_ses-01_T2w.json
test_data/bids_wetrun_testing/bids_T2w/sub-718211/ses-01/anat/: sub-718211_ses-01_T1w.json
tests/: test_fcsv_output.py
tests/data/: test_fcsv_output.py
tests/data/derivatives/.snakemake/iocache/: latest.pkl
tests/data/derivatives/config/: snakebids.yml
