[project]
name = "autoafids"
version = "0.0.1"
description = "End-to-end SnakeBIDS workflow for landmark regression and derivative apps"
readme = "README.md"
license = "MIT"
authors = [{name = "Alaa Taha", email = "ataha24@uwo.ca"}]
requires-python = ">= 3.11, <3.13"
dependencies = []
scripts = { autoafids = "autoafids.run:app.run" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.feature.runtime.dependencies]
snakebids = ">=0.14.0,<0.15"
appdirs   = ">=1.4.4,<2.0.0"
pyvista   = ">=0.44.2,<0.45.0"
conda = ">=25.5.0,<26"

[tool.pixi.feature.dev.dependencies]
flake8 = ">=4.0.1,<5.0.0"
pytest-console-scripts = ">=1.2.1,<2.0.0"
pytest = "*"
black = ">=24.0.0,<25.0.0"
pylint = ">=2.11.1,<3.0.0"
isort = ">=5.10.1,<6.0.0"
poethepoet = ">=0.10.0,<0.11.0"
snakefmt = ">=0.10.0,<0.11.0"
pygraphviz = "*"
Jinja2 = ">=3.0.3,<4.0.0"
scikit-learn = ">=1.8.0,<2"

[tool.pixi.environments.default]
features = ["runtime"]

[tool.pixi.environments.dev]
features = ["runtime", "dev"]

[tool.pixi.environments.dev-only]
features = ["dev"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pixi.pypi-dependencies]
autoafids = { path = ".", editable = true }

[tool.pixi.dependencies]
snakemake-storage-plugin-http = ">=0.3.0,<0.4"
unzip = ">=6.0,<7"


[tool.pixi.feature.dev.tasks]
quality_check = "isort autoafids/*.py && black autoafids --check && snakefmt autoafids --check"
quality_fix = "isort autoafids/*.py && black autoafids  && snakefmt autoafids"
